--- a/app/src/main/res/layout/activity_constraint1.xml
+++ b/app/src/main/res/layout/activity_constraint1.xml
@@ -6,24 +6,71 @@
         android:layout_height="match_parent"
         tools:context=".ui.ConstraintPlaceholderActivity">
 
-    <TextView
-            android:id="@+id/textView1"
+    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_light"
-            android:padding="5dp"
-            android:text="TextView1"
-            android:visibility="visible" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="100dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-            android:id="@+id/textView2"
+        <View
+                android:id="@+id/view_1"
+                android:layout_width="16dp"
+                android:layout_height="8dp"
+                android:background="@drawable/selector_indicator_guide" />
+
+        <View
+                android:id="@+id/view_2"
+                android:layout_width="8dp"
+                android:layout_height="8dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/selector_indicator_guide" />
+
+    </LinearLayout>
+
+    <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/text_green_color"
-            android:padding="5dp"
-            android:text="TextView2"
-            app:layout_constraintStart_toEndOf="@+id/textView1"
-            app:layout_goneMarginLeft="10dp"
-            app:layout_goneMarginStart="10dp" />
+            android:text="button"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="100dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_blue_bright"
+                app:layout_constraintBaseline_toBaselineOf="@+id/unit"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/unit">
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/holo_blue_bright"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    tools:text="12533939532" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+                android:id="@+id/unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_light"
+                app:layout_constraintLeft_toRightOf="@id/value"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="kmffjelelelfff" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
