--- a/app/src/main/res/layout/activity_view_group.xml
+++ b/app/src/main/res/layout/activity_view_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.john.kot.viewGroup.view.HistoryFlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -54,20 +54,20 @@
                 android:text="费劲哦哦儿6"
                 android:textSize="20sp" />
 
-     <TextView
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="费劲哦哦儿7"
                 android:textSize="20sp" />
-     <TextView
+
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="费劲哦哦儿8"
                 android:textSize="20sp" />
 
 
-
     </com.john.kot.viewGroup.view.FlowLayout>
 
 
-</LinearLayout>
+</com.john.kot.viewGroup.view.HistoryFlowLayout>
