--- a/app/src/main/res/layout/activity_constraint.xml
+++ b/app/src/main/res/layout/activity_constraint.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.ConstraintPlaceholderActivity">
+        tools:context=".ui.constraint.ConstraintPlaceholderActivity">
 
     <androidx.constraintlayout.widget.Placeholder
             android:id="@+id/place_holder1"
