--- a/app/src/main/res/layout/activity_view_group.xml
+++ b/app/src/main/res/layout/activity_view_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.john.kot.viewGroup.view.HistoryFlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -14,8 +14,10 @@
             android:textSize="20sp" />
 
     <com.john.kot.viewGroup.view.FlowLayout
+            android:id="@+id/flow_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
 
         <TextView
                 android:layout_width="wrap_content"
@@ -69,5 +71,4 @@
 
     </com.john.kot.viewGroup.view.FlowLayout>
 
-
-</com.john.kot.viewGroup.view.HistoryFlowLayout>
+</LinearLayout>
