--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
 
     <color name="mainBgColor">#C8E6C9</color>
     <color name="mainColor">#4CAF50</color>
-
+    <color name="heroblue">#005ABE</color>
 
 </resources>
