--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="mainColor">#4CAF50</color>
     <color name="heroblue">#005ABE</color>
 
+    <color name="color_005ABE">#005ABE</color>
+
 </resources>
