--- a/app/src/main/res/layout/activity_date.xml
+++ b/app/src/main/res/layout/activity_date.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".tool.date.DateActivity">
-<Button
-        android:id="@+id/bt_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="时间空间"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+            android:id="@+id/bt_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="时间空间" />
+
+    <Button
+            android:id="@+id/get_current_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="getCurrentTime" />
+
+    <Button
+            android:id="@+id/get_current_time_hms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="getCurrentTime dd/MM/yyyy hh:mm:ss" />
+
+</androidx.appcompat.widget.LinearLayoutCompat>
