--- a/app/src/main/res/layout/activity_scroll_view.xml
+++ b/app/src/main/res/layout/activity_scroll_view.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ui.scroll.ScrollViewActivity">
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/layout"
-        tools:context=".ui.scroll.ScrollViewActivity">
+        android:layout_height="match_parent">
 
-
-    <Button
-            android:id="@+id/scroll_to_btn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="scrollTo"/>
+            android:orientation="vertical">
 
-    <Button
-            android:id="@+id/scroll_by_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="scrollBy"/>
+            <Button
+                android:id="@+id/scroll_to_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="scrollTo" />
 
+            <Button
+                android:id="@+id/scroll_by_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="scrollBy" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
