--- a/androidUtil/src/main/res/layout/dialog_alert.xml
+++ b/androidUtil/src/main/res/layout/dialog_alert.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:textSize="35sp"
-            android:textColor="@android:color/holo_blue_light"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="10dp"
-            android:layout_height="wrap_content"/>
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:textSize="35sp" />
 
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/tv_title"
-            android:id="@+id/recycle_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        android:id="@+id/recycle_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_title"
+        android:layout_marginTop="10dp" />
 </RelativeLayout>
