--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -19,9 +19,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/margin_medium"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="@dimen/margin_medium"
     android:background="@android:color/holo_blue_light"
-    android:layout_marginRight="@dimen/margin_medium">
+    android:paddingTop="50dp"
+    android:paddingBottom="50dp">
 
     <TextView
         android:id="@+id/textView"
