--- a/app/src/main/res/layout/activity_view_model1.xml
+++ b/app/src/main/res/layout/activity_view_model1.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".mvvm.dongnao.viewmodel.VIewModel1Activity">
+        tools:context=".mvvm.dongnao.viewmodel.ViewModel1Activity">
     <TextView
             android:id="@+id/textview"
             android:textSize="40sp"
