--- a/app/src/main/res/layout/pickerview_custom_lunar.xml
+++ b/app/src/main/res/layout/pickerview_custom_lunar.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="horizontal">
-
+<!--
         <com.contrarywind.view.WheelView
                 android:id="@+id/year"
                 android:layout_width="fill_parent"
@@ -84,7 +84,7 @@
                 android:id="@+id/second"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.1" />
+                android:layout_weight="1.1" />-->
     </LinearLayout>
 
 
