feat: livedata stick

--- a/app/src/main/res/layout/activity_round_image1.xml
+++ b/app/src/main/res/layout/activity_round_image1.xml
@@ -16,5 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.john.kot.view.RoundImageShaderView
+        android:id="@+id/iv_girl2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/meitu122822234759011"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_girl1" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
