--- a/app/src/main/res/layout/activity_round_image1.xml
+++ b/app/src/main/res/layout/activity_round_image1.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.image.RoundImageActivity">
 
+
     <com.john.kot.view.RoundImageShaderView
         android:id="@+id/iv_girl1"
         android:layout_width="200dp"
@@ -15,6 +16,7 @@
         android:src="@drawable/meitu122822234759011"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <com.john.kot.view.RoundImageShaderView
         android:id="@+id/iv_girl2"
@@ -26,5 +28,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_girl1" />
 
+    <!--    <ImageView
+            android:id="@+id/demo_shader_bottom_round_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_girl2" />-->
 
+    <com.john.kot.view.RoundBottomBitmapShaderView
+        android:id="@+id/demo_shader_bottom_round_image1"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/round_bitmap_height"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/meitu122822234759011"
+        app:layout_constraintTop_toBottomOf="@+id/iv_girl2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
