--- a/app/src/main/res/layout/activity_round_image1.xml
+++ b/app/src/main/res/layout/activity_round_image1.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.image.RoundImageActivity">
 
-
     <com.john.kot.view.RoundImageShaderView
-        android:id="@+id/iv_girl1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/iv_girl2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/meitu122822234759011"
@@ -18,15 +17,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <com.john.kot.view.RoundImageShaderView
-        android:id="@+id/iv_girl2"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+    <com.john.kot.view.RoundBottomBitmapShaderView
+        android:id="@+id/demo_shader_bottom_round_image1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/meitu122822234759011"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_girl1" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_girl2" />
+
+    <com.john.kot.view.RoundSingleBitmapShaderView
+        android:id="@+id/demo_shader_bottom_round_image2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/meitu122822234759011"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/demo_shader_bottom_round_image1" />
+
+    <com.john.kot.view.RoundXfermodeBitmapShaderView
+        android:id="@+id/demo_round_xfermode"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/meitu122822234759011"
+        app:layout_constraintStart_toEndOf="@+id/demo_shader_bottom_round_image2"
+        app:layout_constraintTop_toBottomOf="@+id/demo_shader_bottom_round_image1" />
+
 
     <!--    <ImageView
             android:id="@+id/demo_shader_bottom_round_image"
@@ -35,13 +55,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_girl2" />-->
 
-    <com.john.kot.view.RoundBottomBitmapShaderView
-        android:id="@+id/demo_shader_bottom_round_image1"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/round_bitmap_height"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/meitu122822234759011"
-        app:layout_constraintTop_toBottomOf="@+id/iv_girl2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
