--- a/app/src/main/res/layout/activity_lbsfirebase.xml
+++ b/app/src/main/res/layout/activity_lbsfirebase.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_bright"
     tools:context=".tool.lbs.LBSFirebaseActivity">
 
     <Button
@@ -11,5 +12,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="testCatch" />
+
+
+    <Button
+        android:id="@+id/opengoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="open another app" />
+
+    <Button
+        android:id="@+id/openstyle"
+        android:layout_marginTop="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="open style"
+        app:layout_constraintTop_toBottomOf="@+id/opengoogle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
