--- a/app/src/main/res/layout/activity_xfermode_view.xml
+++ b/app/src/main/res/layout/activity_xfermode_view.xml
@@ -7,6 +7,8 @@
     <com.john.kot.view.XfermodeView
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
