--- a/app/src/main/res/layout/activity_c.xml
+++ b/app/src/main/res/layout/activity_c.xml
@@ -3,23 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright"
-    tools:context=".tool.lbs.LBSFirebaseActivity">
+    tools:context=".activity.ActivityC">
 
     <Button
-        android:id="@+id/testCatch"
+        android:id="@+id/bt_c"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="testCatch" />
-
-
-
-    <Button
-        android:id="@+id/openstyle"
-        android:layout_marginTop="40dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="open style"
-        />
+        android:text="Activiy C"
+        android:textSize="30sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
