--- a/app/src/main/res/layout/activity_d.xml
+++ b/app/src/main/res/layout/activity_d.xml
@@ -3,23 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright"
-    tools:context=".tool.lbs.LBSFirebaseActivity">
+    tools:context=".activity.ActivityD">
 
-    <Button
-        android:id="@+id/testCatch"
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="testCatch" />
-
-
-
-    <Button
-        android:id="@+id/openstyle"
-        android:layout_marginTop="40dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="open style"
-        />
-
+        android:text="Activiy D"
+        android:textSize="30sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
