--- a/app/src/main/res/layout/activity_play_store.xml
+++ b/app/src/main/res/layout/activity_play_store.xml
@@ -8,9 +8,12 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_secret_key"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:lines="4"
+        android:lines="6"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:text="@string/secret_key"
         app:layout_constraintStart_toStartOf="parent"
