--- a/app/src/main/res/layout/activity_live_data.xml
+++ b/app/src/main/res/layout/activity_live_data.xml
@@ -1,47 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".mvvm.livedata.LiveDataTestActivity">
 
-    <data>
-        <variable
-                name="viewmodel"
-                type="com.john.kot.mvvm.livedata.ListViewModel" />
-    </data>
+    <Button
+        android:id="@+id/bt_click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="添加跳转" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".mvvm.livedata.LiveDataTestActivity">
+    <Button
+        android:id="@+id/bt_hide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="添加隐藏" />
 
-        <Button
-                android:id="@+id/bt_click"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="添加跳转" />
-
-        <Button
-                android:id="@+id/bt_hide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="添加隐藏" />
-
-        <TextView
-                android:id="@+id/tv_show"
-                app:layout_constraintTop_toBottomOf="@+id/bt_click"
-                android:text="@{String.valueOf(viewmodel.isShow)}"
-                android:layout_width="wrap_content"
-                android:textSize="24sp"
-                android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tv_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/bt_click" />
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="显示隐藏" />
 
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:goneUnless="@{viewmodel.isVisible}"
-                android:text="显示隐藏"/>
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
