--- a/app/src/main/res/layout/fragment_body_data.xml
+++ b/app/src/main/res/layout/fragment_body_data.xml
@@ -1,103 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <data>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#D1ECEE"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <variable
-                name="vmBodyFragment"
-                type="com.john.kot.mvvm.scrap.BodyDataModel" />
-    </data>
+        <TextView
+            android:id="@+id/tv_sport_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_12"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:text="运动总时长"
+            android:textColor="#ffffffff"
+            android:textSize="24sp" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/tv_port_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_sport_title"
+            android:layout_marginLeft="@dimen/dimen_20"
+            android:layout_marginTop="@dimen/dimen_20"
+            android:text="@{String.valueOf(vmBodyFragment.activityTime)}"
+            android:textColor="#ffffffff"
+            android:textSize="37sp" />
 
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#D1ECEE"
-                android:visibility="gone"
-                app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:id="@+id/tv_calorie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_port_time"
+            android:layout_marginLeft="@dimen/dimen_20"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:text="@{String.valueOf(vmBodyFragment.activityCosts)}"
+            android:textColor="#ffffffff"
+            android:textSize="37sp" />
 
-            <TextView
-                    android:id="@+id/tv_sport_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dimen_12"
-                    android:layout_marginTop="@dimen/dimen_10"
-                    android:text="运动总时长"
-                    android:textColor="#ffffffff"
-                    android:textSize="24sp" />
+        <TextView
+            android:id="@+id/tv_seat_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tv_sport_title"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="23dp"
+            android:text="静坐总时长"
+            android:textColor="#ffffffff"
+            android:textSize="24sp" />
 
-            <TextView
-                    android:id="@+id/tv_port_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_sport_title"
-                    android:layout_marginLeft="@dimen/dimen_20"
-                    android:layout_marginTop="@dimen/dimen_20"
-                    android:text="@{String.valueOf(vmBodyFragment.activityTime)}"
-                    android:textColor="#ffffffff"
-                    android:textSize="37sp" />
+        <TextView
+            android:id="@+id/tv_seat_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_seat_title"
+            android:layout_alignRight="@+id/tv_seat_title"
+            android:layout_marginTop="@dimen/dimen_20"
+            android:text="2小时23分钟"
+            android:textColor="#ffffffff"
+            android:textSize="37sp" />
 
-            <TextView
-                    android:id="@+id/tv_calorie"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_port_time"
-                    android:layout_marginLeft="@dimen/dimen_20"
-                    android:layout_marginTop="@dimen/dimen_10"
-                    android:text="@{String.valueOf(vmBodyFragment.activityCosts)}"
-                    android:textColor="#ffffffff"
-                    android:textSize="37sp" />
-
-            <TextView
-                    android:id="@+id/tv_seat_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/tv_sport_title"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:text="静坐总时长"
-                    android:textColor="#ffffffff"
-                    android:textSize="24sp" />
-
-            <TextView
-                    android:id="@+id/tv_seat_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_seat_title"
-                    android:layout_alignRight="@+id/tv_seat_title"
-                    android:layout_marginTop="@dimen/dimen_20"
-                    android:text="2小时23分钟"
-                    android:textColor="#ffffffff"
-                    android:textSize="37sp" />
-
-            <TextView
-                    android:id="@+id/tv_seat_calorie"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_seat_time"
-                    android:layout_alignRight="@id/tv_seat_time"
-                    android:layout_marginTop="@dimen/dimen_10"
-                    android:text="800"
-                    android:textColor="#ffffffff"
-                    android:textSize="37sp" />
+        <TextView
+            android:id="@+id/tv_seat_calorie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_seat_time"
+            android:layout_alignRight="@id/tv_seat_time"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:text="800"
+            android:textColor="#ffffffff"
+            android:textSize="37sp" />
 
 
-        </RelativeLayout>
+    </RelativeLayout>
 
-        <com.android.util.view.ViewBodySleep
-                android:id="@+id/view_body_sleep"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:paddingLeft="55dp"
-                android:paddingRight="48dp"
-                app:layout_constraintTop_toTopOf="parent" />
+    <com.android.util.view.ViewBodySleep
+        android:id="@+id/view_body_sleep"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="55dp"
+        android:paddingRight="48dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
