--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".arch.recyclerview.MainActivity">
-
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".arch.recyclerview.MainActivityApp">
 
 
     <!--
         <com.john.ankotlin.elec.ZXBackGround android:layout_width="match_parent" android:layout_height="200dp"/>
     -->
 
-<!--    <Button
-            android:id="@+id/bt_wenhao"
-            android:text="？处理"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <!--    <Button
+                android:id="@+id/bt_wenhao"
+                android:text="？处理"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
-    <Button
-            android:id="@+id/bt_gantan"
-            android:text="！！处理"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
+        <Button
+                android:id="@+id/bt_gantan"
+                android:text="！！处理"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
     <FrameLayout
             android:id="@+id/sample_content_fragment"
             android:layout_width="match_parent"
