feat: file migrate

--- a/app/src/main/res/layout/activity_elec.xml
+++ b/app/src/main/res/layout/activity_elec.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.elec.ElecActivity">
+
+    <com.john.kot.ui.elec.Electrocardiogram
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".elec.ElecActivity">
-    <com.john.kot.elec.Electrocardiogram
-            android:layout_width="match_parent" android:layout_height="wrap_content"/>
-    <com.john.kot.elec.ReportView
-            android:id="@+id/pathView"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-    />
+        android:layout_height="wrap_content" />
+
+    <com.john.kot.ui.elec.ReportView
+        android:id="@+id/pathView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:onClick="show"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="show"
             android:text="show"/>
 
 </RelativeLayout>
