--- a/app/src/main/res/layout/activity_glide.xml
+++ b/app/src/main/res/layout/activity_glide.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".tool.glide.lifecycle.GlideActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".tool.glide.lifecycle.GlideActivity">
 
     <TextView
-            android:id="@+id/tv_thread"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="开始刷新" />
+        android:id="@+id/tv_thread"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始刷新" />
 
     <Button
-            android:id="@+id/bt_input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="输入" />
+        android:id="@+id/bt_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="输入" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:round="4dp"
-            android:src="@mipmap/sevirl_400_400_southern_africa_septemberpng" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@mipmap/sevirl_400_400_southern_africa_septemberpng"
+        app:round="4dp" />
+
+    <include
+        android:id="@+id/ic_link"
+        android:visibility="gone"
+        layout="@layout/activity_deep_link" />
+
 </LinearLayout>
