--- a/app/src/main/res/layout/activity_deep_link.xml
+++ b/app/src/main/res/layout/activity_deep_link.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/transfer_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".link.DeepLinkActivity">
 
     <TextView
         android:id="@+id/bt_deeplink"
-        android:linksClickable="true"
-        android:background="#EA9A64"
-        android:text="deeplink page"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#EA9A64"
+        android:linksClickable="true"
+        android:text="deeplink page"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
