--- a/app/src/main/res/layout/activity_livedata_stick.xml
+++ b/app/src/main/res/layout/activity_livedata_stick.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fm_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".mvvm.livedata.LivedataStickActivity" />
+    android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/bt_first"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sticky analysis" />
+
+    <Button
+        android:id="@+id/bt_sendData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="senddata" />
+
+    <FrameLayout
+        android:id="@+id/fm_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".mvvm.livedata.LivedataStickActivity" />
+
+</LinearLayout>
