--- a/app/src/main/res/layout/activity_view_model_share.xml
+++ b/app/src/main/res/layout/activity_view_model_share.xml
@@ -9,10 +9,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:text="noew"
-        android:textSize="40sp"
+        android:text="noewfff"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
