--- a/app/src/main/res/layout/fragment_view_model.xml
+++ b/app/src/main/res/layout/fragment_view_model.xml
@@ -18,4 +18,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_number">
+
+        <include
+            layout="@layout/activity_deep_link" />
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
