--- a/app/src/main/res/layout/item_ammount.xml
+++ b/app/src/main/res/layout/item_ammount.xml
@@ -8,6 +8,8 @@
     android:layout_gravity="center_horizontal"
     android:background="#EBEBEB"
     android:paddingTop="5dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingBottom="5dp">
 
 
@@ -18,6 +20,7 @@
         android:text="RM"
         android:textColor="#282828"
         android:textSize="12dp"
+        android:layout_marginEnd="2dp"
         FontTextView:kit_typeFace="@string/font_type_rb_Regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/amount_tv"
