--- a/app/src/main/res/layout/fragment_ok.xml
+++ b/app/src/main/res/layout/fragment_ok.xml
@@ -1,8 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".component.fragment.life.LifeFragment">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/bt_fragment"
