--- a/Mine/src/main/res/values/colors.xml
+++ b/Mine/src/main/res/values/colors.xml
@@ -40,5 +40,7 @@
     <color name="pink">#ffffcbd7</color>
     <color name="green">#ffbae4b6</color>
 
+    <color name="colorGray">#999999</color>
+
 
 </resources>
