--- a/app/src/main/res/layout/ble_activity_temp.xml
+++ b/app/src/main/res/layout/ble_activity_temp.xml
@@ -11,16 +11,15 @@
             android:layout_height="80dp"
             android:layout_marginLeft="13dp"
             android:layout_marginTop="13dp"
-            android:src="@mipmap/ble_back_home" />
+             />
 
     <ImageView
-            android:id="@+id/iv_branch"
-            android:layout_width="280dp"
-            android:layout_height="400dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="90dp"
-            android:src="@mipmap/nurse" />
+        android:id="@+id/iv_branch"
+        android:layout_width="280dp"
+        android:layout_height="400dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="90dp" />
 
     <TextView
             android:id="@+id/tv_cs_phone_show"
