--- a/app/src/main/res/layout/activity_constraint1.xml
+++ b/app/src/main/res/layout/activity_constraint1.xml
@@ -1,75 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.constraint.ConstraintPlaceholderActivity">
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="100dp"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        <View
-                android:id="@+id/view_1"
-                android:layout_width="16dp"
-                android:layout_height="8dp"
-                android:background="@drawable/selector_indicator_guide" />
-
-        <View
-                android:id="@+id/view_2"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginLeft="8dp"
-                android:background="@drawable/selector_indicator_guide" />
-
-    </LinearLayout>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.constraint.ConstraintPlaceholderActivity">
 
     <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="button"
-            app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="100dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/value"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@android:color/holo_blue_bright"
-                app:layout_constraintBaseline_toBaselineOf="@+id/unit"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/unit">
-
-            <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/holo_blue_bright"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    tools:text="12533939532" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
-                android:id="@+id/unit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/holo_red_light"
-                app:layout_constraintLeft_toRightOf="@id/value"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="kmffjelelelfff" />
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@android:color/holo_blue_bright"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="12533939532" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
