--- a/app/src/main/res/layout/activity_photo_basics.xml
+++ b/app/src/main/res/layout/activity_photo_basics.xml
@@ -1,48 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".tool.image.PhotoBasicsActivity">
+
+
+    <ImageView
+        android:id="@+id/iv_banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".tool.image.PhotoBasicsActivity">
+        android:layout_height="150dp" />
 
     <Button
-            android:id="@+id/bt_basic_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="直接显示" />
+        android:id="@+id/bt_basic_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="直接显示" />
+
+    <Button
+        android:id="@+id/bt_photo_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="相册选择" />
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/bt_basic_path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:text="获取原图路径" />
 
         <Button
-                android:id="@+id/bt_basic_path"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="获取原图路径" />
-
-        <Button
-                android:id="@+id/bt_compass_path"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="获取压缩路径" />
+            android:id="@+id/bt_compass_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取压缩路径" />
 
     </LinearLayout>
 
 
     <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="图片加到相册" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="图片加到相册" />
 
     <ImageView
-            android:id="@+id/img_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+        android:id="@+id/img_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp" />
     .
 </LinearLayout>
