--- a/app/src/main/res/layout/activity_photo_basics.xml
+++ b/app/src/main/res/layout/activity_photo_basics.xml
@@ -7,10 +7,23 @@
     tools:context=".tool.image.PhotoBasicsActivity">
 
 
-    <ImageView
-        android:id="@+id/iv_banner"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_banner1"
+            android:layout_width="100dp"
+            android:layout_height="150dp" />
+
+        <ImageView
+            android:id="@+id/iv_banner2"
+            android:layout_width="100dp"
+            android:layout_height="150dp" />
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/bt_basic_show"
