--- a/app/src/main/res/layout/activity_play_store.xml
+++ b/app/src/main/res/layout/activity_play_store.xml
@@ -6,28 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".tool.GoogleTopUpActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_secret_key"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:lines="6"
-        android:text="@string/secret_key"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/opengoogle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="open another app"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_secret_key" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/open_permission"
@@ -35,13 +24,35 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="open Need Permission"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/opengoogle" />
 
+    <Button
+        android:id="@+id/btn_google_auth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text=" google auth "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/open_permission" />
+
+    <Button
+        android:id="@+id/btn_google_topup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text=" google topup "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_google_auth" />
+
     <include
         android:id="@+id/contact_input_tips"
         layout="@layout/activity_c"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/open_permission" />
 
