--- a/app/src/main/res/layout/activity_ring_circle_image.xml
+++ b/app/src/main/res/layout/activity_ring_circle_image.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.image.RingCircleImageActivity">
 
 
     <com.kot.ui.image.view.RingCircleImageView
+        android:id="@+id/ring_circle_image"
         android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        app:ring_width="10dp"
+        app:ring_color="@color/text_yellow_select" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
